--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,9 +1,74 @@
 #content {
-  margin-left: auto;
-  margin-right: auto;
-  width: 650px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 650px;
 }
 
 #greeting-container {
-  margin-top: 20px;
+    margin-top: 20px;
+}
+
+#banner {
+    margin: auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-color: #f0f0f0;
+    margin-bottom: 30px;
+    text-align: -webkit-center;
+    width: 650px;
+}
+
+.avatar {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+}
+
+.center-text {
+     text-align: center;
+}
+
+#about-me{
+    background-color: #f0f0f0;
+    padding: 25px;
+    margin-bottom: 30px;
+}
+
+.box{
+    background-color: #f0f0f0;
+    padding-top: .5px;
+    padding-bottom: .5px;
+    margin-bottom: 30px;
+    text-align:center;
+}
+
+.column {
+    float: left;
+    width: 50%;
+ }
+
+.row {
+  margin: 30px; 
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+a {
+    color:black;
+    
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+.column:hover {
+    transform: scale(1.25);
 }
