--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -415,3 +415,19 @@ div[class^='bar-'] {
     top: 50%;
     bottom: 50%;
 }
+
+#task-list {
+  list-style-type: none;
+}
+
+.task {
+  border: thin solid black;
+  display: flex;
+  margin: 10px;
+  padding: 10px;
+  width: 600px;
+}
+
+.task span {
+  flex-grow: 1;
+}
