--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -431,3 +431,9 @@ div[class^='bar-'] {
 .comment span {
   flex-grow: 1;
 }
+
+#map {
+  border: thin solid black;
+  height: 500px;
+  width: 500px;
+}
