--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -126,88 +126,54 @@ span.m-left{
     transform: translate(-50%, -50%);
 }
 
-/*  .fa-chevron-down {
-  color: #c0c0c038;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.fa-chevron-down:hover {
-  color: red;
-  transition: .6s;
-}
-
-#to-about,
-#to-skills,
-#to-contact {
-  margin-top: 30px;
-}
-
-.space,
-.contact{
-  height: 13vh;
-}
-
-.about {
-  height: 70vh;
-  margin-top: 8vh;
-}
-
-.contact {
-  height: 65vh;
-  margin-top: 15vh;
-}
-
 .about h1,
 .contact h1,
 .comments h1{
-  font-size:10rem;
-  z-index: 0;
-  opacity: .1;
+    font-size:10rem;
+    z-index: 0;
+    opacity: .1;
 }
 
 .about-me-info,
 .contact-me{
-  max-width: 900px;
-  background-color: #343434;
-  box-shadow: 0 0 1.2rem rgba(0, 0, 0, 0.5);
-  padding: 50px;
-  position: relative;
-  top: -70px;
-  left: 50%;
-  right: 50%;
-  transform: translateX(-50%);
-  z-index: 1;
+    max-width: 900px;
+    background-color: #343434;
+    box-shadow: 0 0 1.2rem rgba(0, 0, 0, 0.5);
+    padding: 50px;
+    position: relative;
+    top: -70px;
+    left: 50%;
+    right: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
 }
 
 .about-me-info p,
 .contact-me p {
-  font-size: 1.3rem;
-  color: white;
-
-  margin: 10px;
+    font-size: 1.3rem;
+    color: white;
+    margin: 10px;
 }
 
 .about-me-info p:nth-child(2),
 .about-me-info p:last-child,
 .contact-me p:nth-child(2),
 .contact-me p:last-child  {
- margin-top:30px;
+     margin-top:30px;
 }
 
 .about img,
 .contact img {
-  width: 300px;
-  position: relative;
-  top: -200px;
-  left: 50%;
-  right: 50%;
-  transform: translateX(100%);
-  border-radius: 50%;
+    width: 300px;
+    position: relative;
+    top: -200px;
+    left: 50%;
+    right: 50%;
+    transform: translateX(100%);
+    border-radius: 50%;
 }
 
+/*  
 .secret-message{
   width: 300px;
   position: relative;
